Feat: Now able to show diagnoses and patients

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -3,8 +3,12 @@
     <fa-icon [icon]="faHome"></fa-icon>
     Home
   </div>
-  <div class="menuItem" routerLink="details">
-    <fa-icon [icon]="faInfoCircle"></fa-icon>
-    Details
+  <div class="menuItem" routerLink="/patients">
+    <fa-icon [icon]="faUserInjured"></fa-icon>
+    Patients
+  </div>
+  <div class="menuItem" routerLink="/diagnosis">
+    <fa-icon [icon]="faDiagnosis"></fa-icon>
+    Diagnoses
   </div>
 </div>
