Feat: It is now possible to select a patient and see the details for the patient

--- a/src/app/feature/patients/patient-list/patient-list.component.css
+++ b/src/app/feature/patients/patient-list/patient-list.component.css
@@ -4,11 +4,18 @@
 }
 
 .patients {
-  overflow: auto;
   display: grid;
-  grid-template-columns: 7em 10em auto 5em auto;
+  grid-template-columns: 7em 7em 15em 5em auto;
+  margin: 0 2em;
+}
+
+.header {
+  border-bottom: 1px solid lightgray;
+  padding-bottom: 0.25em;
 }
 
 .patientElement {
+  display: flex;
+  align-items: center;
   padding: 0.15em 0.5em;
 }
