--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -11,4 +11,8 @@
     <fa-icon [icon]="faDiagnosis"></fa-icon>
     Diagnoses
   </div>
+  <div class="menuItem" routerLink="/addresses">
+    <fa-icon [icon]="faDiagnosis"></fa-icon>
+    Addresses
+  </div>
 </div>
