--- a/src/app/feature/patients/patient-details/patient-details.component.html
+++ b/src/app/feature/patients/patient-details/patient-details.component.html
@@ -30,4 +30,7 @@
       <div>This patient does not have an address</div>
     </ng-template>
   </div>
+  <div class="actions">
+    <sse-button (click)="clickEventReceived(patient)">Edit</sse-button>
+  </div>
 </div>
