--- a/src/app/feature/patients/patient/patient.component.html
+++ b/src/app/feature/patients/patient/patient.component.html
@@ -1,4 +1,1 @@
-<div class="patientContainer">
-  <sse-patient-list (selectedPatient)="selectPatient($event)" class="item"></sse-patient-list>
-  <sse-patient-details [patient]="selectedPatient" class="item"></sse-patient-details>
-</div>
+<router-outlet></router-outlet>
