--- a/src/app/feature/patients/patient-list/patient-list.component.css
+++ b/src/app/feature/patients/patient-list/patient-list.component.css
@@ -7,6 +7,11 @@
   display: grid;
   grid-template-columns: 7em 7em 15em 5em auto;
   margin: 0 2em;
+  transition: background-color 150ms ease-in-out;
+}
+
+.patients:hover {
+  background-color: #c0c0c0;
 }
 
 .header {
@@ -18,4 +23,17 @@
   display: flex;
   align-items: center;
   padding: 0.15em 0.5em;
+}
+
+.actionItem {
+  cursor: pointer;
+  transition: color 150ms ease-in-out;
+}
+
+.actionItem:hover {
+  color: #ad5700;
+}
+
+.odd {
+  background-color: #e4e4e4;
 }
