--- a/src/app/feature/patients/patient-list/patient-list.component.html
+++ b/src/app/feature/patients/patient-list/patient-list.component.html
@@ -7,14 +7,16 @@
     <div class="patientElement">Gender</div>
     <div class="patientElement">Select</div>
   </div>
-  <div *ngFor="let patient of patients$|async; trackBy: idTracker " class="patients">
+  <div *ngFor="let patient of patients$|async; trackBy: idTracker; let odd = odd; let even=even"
+       [ngClass]="{odd: odd, even: even}"
+       class="patients">
     <div class="patientElement">{{patient.first_name}}</div>
     <div class="patientElement">{{patient.last_name}}</div>
     <div class="patientElement">{{patient.email}}</div>
     <div class="patientElement">
       <fa-icon [icon]="patient.gender == 'Male'? faMars : faVenus"></fa-icon>
     </div>
-    <div class="patientElement">
+    <div class="patientElement actionItem">
       <fa-icon (click)="selectPatient(patient)" [icon]="faInfoCircle"></fa-icon>
     </div>
   </div>
