--- a/src/app/feature/addresses/address-list/address-list.component.html
+++ b/src/app/feature/addresses/address-list/address-list.component.html
@@ -1,4 +1,3 @@
-<sse-loading></sse-loading>
 <div class="addresses header">
   <div (click)="sort('line', sortDirection === 'asc'? 'desc': 'asc')" class="item">Line
     <fa-icon *ngIf="sortColumn === 'line' && sortDirection === 'asc' " [icon]="faSortDown"></fa-icon>
@@ -22,10 +21,12 @@
     <fa-icon *ngIf="sortColumn === 'country' && sortDirection === 'desc' " [icon]="faSortUp"></fa-icon>
   </div>
 </div>
-<div *ngFor="let address of addresses" class="addresses">
-  <div class="item">{{address.line}}</div>
-  <div class="item">{{address.postalCode}}</div>
-  <div class="item">{{address.city}}</div>
-  <div class="item">{{address.district}}</div>
-  <div class="item">{{address.country}}</div>
-</div>
+<cdk-virtual-scroll-viewport [itemSize]="20" class="table">
+  <div *cdkVirtualFor="let address of addresses" class="addresses">
+    <div class="item">{{address.line}}</div>
+    <div class="item">{{address.postalCode}}</div>
+    <div class="item">{{address.city}}</div>
+    <div class="item">{{address.district}}</div>
+    <div class="item">{{address.country}}</div>
+  </div>
+</cdk-virtual-scroll-viewport>
