--- a/src/app/shared/components/loading/loading.component.html
+++ b/src/app/shared/components/loading/loading.component.html
@@ -1,22 +1,9 @@
-<div class="loading-screen-wrapper">
-  <div class="loading-screen-icon">
-    <div class="blobs">
-      <div class="blob-center"></div>
-      <div class="blob"></div>
-      <div class="blob"></div>
-      <div class="blob"></div>
-      <div class="blob"></div>
-      <div class="blob"></div>
-      <div class="blob"></div>
-    </div>
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
-      <defs>
-        <filter id="goo">
-          <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10"/>
-          <feColorMatrix in="blur" mode="matrix" result="goo" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7"/>
-          <feBlend in="SourceGraphic" in2="goo"/>
-        </filter>
-      </defs>
-    </svg>
+<div class="container">
+  <div *ngIf="loading" class="spinner">
+    <div class="spinner-circle spinner-circle-outer"></div>
+    <div class="spinner-circle-off spinner-circle-inner"></div>
+    <div class="spinner-circle spinner-circle-single-1"></div>
+    <div class="spinner-circle spinner-circle-single-2"></div>
+    <div class="text">...working...</div>
   </div>
 </div>
