--- a/src/app/feature/diagnoses/diagnose-list/diagnose-list.component.html
+++ b/src/app/feature/diagnoses/diagnose-list/diagnose-list.component.html
@@ -1,5 +1,5 @@
 <div class="container diagnoses">
   <div *ngFor="let diagnose of diagnoses$|async">
-    <sse-diagosis-details [diagnose]="diagnose"></sse-diagosis-details>
+    <sse-diagnose-details [diagnose]="diagnose"></sse-diagnose-details>
   </div>
 </div>
