Feat: Patient has pretty much been storiedfied in all places

--- a/src/app/feature/patients/patient-diagnose/patient-diagnose.component.html
+++ b/src/app/feature/patients/patient-diagnose/patient-diagnose.component.html
@@ -6,7 +6,7 @@
   </div>
   <div>
     Switch to:
-    <sse-diagnose-selector (diagnoseChanged)="updateDiagnose($event, patient)"
+    <sse-diagnose-selector (diagnoseChanged)="updateDiagnose($event)"
                            [selectedDiagnoseId]="patient.diagnosis"></sse-diagnose-selector>
   </div>
   <div>
