--- a/src/app/feature/diagnoses/diagnose-selector/diagnose-selector.component.html
+++ b/src/app/feature/diagnoses/diagnose-selector/diagnose-selector.component.html
@@ -1,3 +1,3 @@
-<select (change)="diagnoseChange()" [(ngModel)]="selectedDiagnose" class="select-css">
+<select (change)="diagnoseChange($event)" [(ngModel)]="selectedDiagnose" class="select-css">
   <option *ngFor="let diagnosis of diagnoses$|async" [ngValue]="diagnosis">{{diagnosis.name}}</option>
 </select>
