Feat: Added a lot of documentation. And added support for Compodoc

--- a/src/app/feature/patients/patient/patient-edit/patient-edit.component.html
+++ b/src/app/feature/patients/patient/patient-edit/patient-edit.component.html
@@ -1,5 +1,5 @@
 <div>Edit patient</div>
-<div *ngIf="patient">
+<div *ngIf="patient$|async as patient">
   <div><label>Firstname
     <input [(ngModel)]="patient.first_name">
   </label></div>
