Feat: Added compodoc

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,17 +1,17 @@
-<div class="menuContainer">
-  <div class="menuItem" routerLink="home">
+<div class="menuContainer animate blur ">
+  <div class="menuItem animate blur delay-1" routerLink="home">
     <fa-icon [icon]="faHome"></fa-icon>
     Home
   </div>
-  <div class="menuItem" routerLink="/patients">
+  <div class="menuItem animate blur delay-2" routerLink="/patients">
     <fa-icon [icon]="faUserInjured"></fa-icon>
     Patients
   </div>
-  <div class="menuItem" routerLink="/diagnosis">
+  <div class="menuItem animate blur delay-3" routerLink="/diagnosis">
     <fa-icon [icon]="faDiagnosis"></fa-icon>
     Diagnoses
   </div>
-  <div class="menuItem" routerLink="/addresses">
+  <div class="menuItem animate blur delay-4" routerLink="/addresses">
     <fa-icon [icon]="faDiagnosis"></fa-icon>
     Addresses
   </div>
