--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -1,9 +1,12 @@
+@import "../../animation";
+
 .menuContainer {
   height: 35px;
   display: flex;
   border-bottom: 1px solid lightgray;
   align-content: center;
   align-items: center;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(241, 196, 27, 0.4) 100%);
 }
 
 .menuItem {
