--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -1,15 +1,107 @@
 @import "../../animation";
 
-.menuContainer {
-  height: 35px;
-  display: flex;
-  border-bottom: 1px solid lightgray;
-  align-content: center;
-  align-items: center;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(241, 196, 27, 0.4) 100%);
+//.menuContainer {
+//  height: 35px;
+//  display: flex;
+//  border-bottom: 1px solid lightgray;
+//  align-content: center;
+//  align-items: center;
+//  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(241, 196, 27, 0.4) 100%);
+//  box-shadow: 0 1px 6px -2px rgba(65, 64, 49, 0.25);
+//  -webkit-box-shadow: 0 1px 6px -2px rgba(65, 64, 49,0.25);
+//  -moz-box-shadow: 0 1px 6px -2px rgba(65, 64, 49,0.25);
+//  transition: box-shadow 0.3s ease-in-out;
+//  &:hover {
+//    box-shadow: 0 6px 6px -2px rgba(65, 64, 49, 0.25);
+//    -webkit-box-shadow: 0 6px 6px -2px rgba(65, 64, 49,0.25);
+//    -moz-box-shadow: 0 6px 6px -2px rgba(65, 64, 49,0.25);
+//
+//  }
+//}
+
+
+//.menuItem {
+//  cursor: pointer;
+//  padding: 0 1em;
+//  border-right: 3px solid lightgray;
+//  transform: skew(-15deg);
+//}
+
+
+ul {
+  border-bottom: 1px solid #ccc;
+  list-style: none;
+  margin: 0 0 1.5rem 0;
+  padding: 0;
+  box-shadow: 0 1px 6px -2px rgba(65, 64, 49, 0.25);
+  -webkit-box-shadow: 0 1px 6px -2px rgba(65, 64, 49,0.25);
+  -moz-box-shadow: 0 1px 6px -2px rgba(65, 64, 49,0.25);
+  transition: box-shadow 0.3s ease-in-out;
+  &:hover {
+    box-shadow: 0 6px 6px -2px rgba(65, 64, 49, 0.25);
+    -webkit-box-shadow: 0 6px 6px -2px rgba(65, 64, 49,0.25);
+    -moz-box-shadow: 0 6px 6px -2px rgba(65, 64, 49,0.25);
+
+  }
+}
+li {
+  background-image: linear-gradient(
+      to bottom,
+      transparent 50%,
+      rgba(162,211,156, 1) 50%,
+      rgba(162,211,156,1) 95%,
+      rgba(124,197,118,1) 95%
+  );
+  background-size: 100% 200%;
+  background-position: top center;
+  color: #666;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  transition: all .25s ease-in-out;
+  &:hover {
+    background-position: bottom center;
+    color: rgba(0,0,0,.75);
+  }
+  & div {
+    color: #666;
+    display: block;
+    padding: 1rem 0;
+    transition: all .25s ease-in-out;
+  }
 }
 
-.menuItem {
-  cursor: pointer;
-  padding: 0 1em;
+[id^='menu'] ul {
+  background-color: #eee;
+  border: 0;
+  display: flex;
+  padding: 0 2rem;
+  position: relative;
+  left: -2rem;
+  width: calc(100% + 4rem);
+  & li {
+    background-image: linear-gradient(
+        to bottom,
+        transparent 50%,
+        rgba(68,140,203, 1) 50%,
+        rgba(68,140,203,1) 95%,
+        rgba(0,114,188,1) 95%
+    );
+    flex: 1 1 auto;
+    & div:hover {
+      color: #eee;
+    }
+  }
+}
+#menu {
+  & ul li {
+    border-left: 1px solid #499372;
+    transform: skew(-15deg);
+    &:last-child {
+      border-right: 1px solid #ddd;
+    }
+    & div {
+      transform: skew(15deg);
+    }
+  }
 }
