Feat: diagnosis table is now animated Feat: Menu now uses aria Feat: Some UI enhancements

--- a/src/app/feature/diagnoses/diagnosis-list/diagnosis-list.component.html
+++ b/src/app/feature/diagnoses/diagnosis-list/diagnosis-list.component.html
@@ -1,5 +1,5 @@
-<div class="container diagnoses">
-  <div *ngFor="let diagnose of diagnoses$|async">
+<div class="container diagnoses" *ngIf="diagnoses$|async as diagnoses" [@listAnimation]="diagnoses.length">
+  <div *ngFor="let diagnose of diagnoses">
     <sse-diagosis-details [diagnose]="diagnose"></sse-diagosis-details>
   </div>
 </div>
