--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav id="menu">
+<nav aria-label="Main" id="menu">
   <ul>
     <li routerLink="home" class="menuItem animate blur delay-1">
       <div title="Home">
