--- a/src/app/feature/diagnoses/diagnosis-list/diagnosis-details/diagnosis-details.component.scss
+++ b/src/app/feature/diagnoses/diagnosis-list/diagnosis-details/diagnosis-details.component.scss
@@ -3,8 +3,11 @@
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   padding: 0.5em;
   margin: 0.5em;
+  transition: box-shadow 0.2s ease-in-out;
+  &:hover {
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
+  }
 }
-
 .header {
   border-bottom: 1px solid lightgray;
   font-weight: 600;
