--- a/src/app/feature/patients/patient-list/patient-list.component.scss
+++ b/src/app/feature/patients/patient-list/patient-list.component.scss
@@ -1,17 +1,27 @@
 .container {
-  max-height: 640px;
+  max-height: 960px;
   overflow: auto;
+  margin: 2em
+}
+
+.example-viewport {
+  height: 600px;
+
 }
 
 .patients {
   display: grid;
   grid-template-columns: 7em 7em 15em 5em auto;
-  margin: 0 2em;
+  margin: 0 0;
+  font-size: 1.2em;
   transition: background-color 150ms ease-in-out;
 }
 
 .patients:hover {
   background-color: #c0c0c0;
+  &:hover {
+    border-bottom: 1px solid #497a8f;
+  }
 }
 
 .header {
@@ -35,5 +45,5 @@
 }
 
 .odd {
-  background-color: #e4e4e4;
+  background-color: #f5f5f5;
 }
