Feat: Some ui fixes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="container">
+  <div>This is the home page for the base module.</div>
+  <div>This project provides a basic overview of how you would implement a simple data centric application.</div>
+  <div>For this specific branch we are demonstrating how it would be implemented using NGRX.</div>
+</div>
