--- a/src/app/shared/components/menu/menu.component.css
+++ b/src/app/shared/components/menu/menu.component.css
@@ -7,6 +7,22 @@
 }
 
 .menuItem {
+  position: relative;
   cursor: pointer;
   padding: 0 1em;
+}
+
+.menuItem:after {
+  content: "";
+  position: absolute;
+  transition: all 0.3s ease-in-out;
+}
+
+.menuItem:hover:after {
+  background-color: #8600d4;
+  bottom: -2px;
+  height: 2px;
+  left: 2px;
+  width: 90%;
+
 }
