--- a/src/app/feature/patients/patient/patient-list/patient-list.component.css
+++ b/src/app/feature/patients/patient/patient-list/patient-list.component.css
@@ -1,39 +1,137 @@
 .container {
-  max-height: 640px;
+  max-height: 800px;
   overflow: auto;
 }
 
-.patients {
-  display: grid;
-  grid-template-columns: 7em 7em 15em 5em auto;
-  margin: 0 2em;
-  transition: background-color 150ms ease-in-out;
+/*.patients {*/
+/*  display: grid;*/
+/*  grid-template-columns: 7em 7em 15em 5em auto;*/
+/*  margin: 0 2em;*/
+/*  transition: background-color 150ms ease-in-out;*/
+/*}*/
+
+/*.row:hover {*/
+/*  background-color: #b7c2c9;*/
+/*}*/
+
+/*.header {*/
+/*  border-bottom: 1px solid lightgray;*/
+/*  padding-bottom: 0.25em;*/
+/*}*/
+
+/*.patientElement {*/
+/*  display: flex;*/
+/*  align-items: center;*/
+/*  padding: 0.15em 0.5em;*/
+/*}*/
+
+/*.actionItem {*/
+/*  cursor: pointer;*/
+/*  transition: color 150ms ease-in-out;*/
+/*}*/
+
+/*.actionItem:hover {*/
+/*  color: #ad5700;*/
+/*}*/
+
+/*.odd {*/
+/*  !*background-color: #e4e4e4;*!*/
+/*}*/
+
+
+
+/*=============================*/
+
+@media screen and (max-width: 580px) {
+
 }
 
-.patients:hover {
-  background-color: #c0c0c0;
+.wrapper {
+  margin: 0 auto;
+  padding: 1em;
+  max-width: 800px;
 }
 
-.header {
-  border-bottom: 1px solid lightgray;
-  padding-bottom: 0.25em;
+.table {
+  margin: 0 0 1em 0;
+  width: 100%;
+  display: table;
+  transition: all 250ms ease-in-out;
 }
 
-.patientElement {
-  display: flex;
+@media screen and (max-width: 580px) {
+  .table {
+    display: block;
+  }
+}
+
+.row {
+  display: table-row;
+  align-content: center;
   align-items: center;
-  padding: 0.15em 0.5em;
+  background-color: #fafafa;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  transition: all 250ms ease-in-out;
 }
 
-.actionItem {
-  cursor: pointer;
-  transition: color 150ms ease-in-out;
+.row:nth-of-type(odd) {
+  background-color: #e9e9e9;
 }
 
-.actionItem:hover {
-  color: #ad5700;
+.row:hover {
+  background-color: #c0d1ee;
 }
 
-.odd {
-  background-color: #e4e4e4;
+.row.header {
+  font-weight: 600;
+  color: #3f3f3f;
+  background: #8ec5ea;
+  transition: all 250ms ease-in-out;
+}
+
+@media screen and (max-width: 580px) {
+  .row {
+    padding: 0.25em 0 0.25em;
+    margin: 0.5em 0;
+    display: block;
+  }
+
+  .row.header {
+    padding: 0;
+    height: 0.5em;
+  }
+
+  .row.header .cell {
+    display: none;
+  }
+
+  .row .cell {
+    margin-bottom: 0.25em;
+  }
+
+  .row .cell:before {
+    margin-bottom: 0.2em;
+    content: attr(data-title);
+    min-width: 98px;
+    font-size: 0.9em;
+    line-height: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #656565;
+    display: block;
+  }
+}
+
+.cell {
+  padding: 0.75em 0.75em;
+  display: table-cell;
+  transition: all 250ms ease-in-out;
+}
+
+
+@media screen and (max-width: 580px) {
+  .cell {
+    padding: 2px 16px;
+    display: block;
+  }
 }
