--- a/src/app/feature/patients/patient/patient-list/patient-list.component.html
+++ b/src/app/feature/patients/patient/patient-list/patient-list.component.html
@@ -1,23 +1,26 @@
 <div class="container">
   <div *ngIf="patients$|async as patients">There are {{patients.length}} patients</div>
-  <div class="patients header">
-    <div class="patientElement">Given name</div>
-    <div class="patientElement">Last name</div>
-    <div class="patientElement">Email</div>
-    <div class="patientElement">Gender</div>
-    <div class="patientElement">Select</div>
-  </div>
-  <div *ngFor="let patient of patients$|async; trackBy: idTracker; let odd = odd; let even=even"
-       [ngClass]="{odd: odd, even: even}"
-       class="patients">
-    <div class="patientElement">{{patient.first_name}}</div>
-    <div class="patientElement">{{patient.last_name}}</div>
-    <div class="patientElement">{{patient.email}}</div>
-    <div class="patientElement">
-      <fa-icon [icon]="patient.gender == 'Male'? faMars : faVenus"></fa-icon>
-    </div>
-    <div class="patientElement actionItem">
-      <fa-icon (click)="selectPatient(patient)" [icon]="faInfoCircle"></fa-icon>
+  <div class="wrapper">
+    <div class="table">
+      <div class="row header">
+        <div class="cell">Given name</div>
+        <div class="cell">Last name</div>
+        <div class="cell">Email</div>
+        <div class="cell">Gender</div>
+        <div class="cell">Select</div>
+      </div>
+      <div *ngFor="let patient of patients$|async; trackBy: idTracker; let odd = odd; let even=even"
+           class="row">
+        <div class="cell">{{patient.first_name}}</div>
+        <div class="cell">{{patient.last_name}}</div>
+        <div class="cell">{{patient.email}}</div>
+        <div class="cell">
+          <fa-icon [icon]="patient.gender == 'Male'? faMars : faVenus"></fa-icon>
+        </div>
+        <div class="cell actionItem">
+          <fa-icon (click)="selectPatient(patient)" [icon]="faInfoCircle"></fa-icon>
+        </div>
+      </div>
     </div>
   </div>
 </div>
